# WACC

./: .gitignore  FunctionCodeGen.hs  Makefile  README  Vagrantfile  compile  execute.sh  report.tex  test.sh  wacc.cabal  wacc_async.c
AlexLexer/: Tokens.x  clean  make
GC/: GC.c
Report/: report.tex
TestSuite/: genExpected.py  output.txt  print.expected
examples/: letStmt.wacc  optional.wacc  struct.wacc  ticTacToeServer.wacc  union.wacc
examples/async/: asyncFib.wacc  asyncSleep.wacc  channels.wacc  echoServer.wacc  ticTacToeServer.wacc
happy/: clean  example.y
src/: ARMGen.hs  ARMTypes.hs  AST.hs  Arguments.hs  BlockGen.hs  CodeGen.hs  CodeGenTypes.hs  Common.hs  Features.hs  FunctionCodeGen.hs  FunctionTypes.hs  GenARM.hs  Lexer.x  Main.hs  OutputFormatting.hs  Parser.hs  Parser.y  ScopedMap.hs  SemCheck.hs  StmtGen.hs  Tokens.hs  lexer.ly
src/Common/: AST.hs  ScopedMap.hs  Span.hs  Stuff.hs  WACCResult.hs
src/Frontend/: Lexer.x  Parser.hs  SemCheck.hs  Tokens.hs
src/GC/: GC.c  Makefile  Page.c  Page.h  PrintMethods.c
src/RegisterAllocation/: ControlFlow.hs  DataFlow.hs  GraphColouring.hs
src/runtime/: Makefile  async.c  async.h  channel.c  channel.h  heap.c  heap.h  list.c  list.h  main.c  network.c  network.h  task.c  task.h  utils.c  utils.h  wacc.h
src/runtime/GC/: GC.c  GC.h  PrintMethods.h
syntaxWacc/: ReadMe  ftdetectwacc.vim  waccSyntaxHighlighting.vim
