name:                wacc
version:             0.1.0.0
synopsis:            WACC Compiler
-- description:
-- license:
license-file:        LICENSE
author:              Ignacio Navarro <in714@ic.ac.uk>,
                     Jaime Rodriguez <jr1713@ic.ac.uk>,
                     Leanne Lyons <ll5914@ic.ac.uk>,
                     Paul Liétar <pl2113@ic.ac.uk>
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable wacc
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9, array
  hs-source-dirs:      src
  default-language:    Haskell2010
  Build-tools:         alex, happy
  other-modules:       Parser, Lexer
