name:                wacc
version:             0.1.0.0
synopsis:            WACC Compiler
-- description:
-- license:
author:              Ignacio Navarro <in714@ic.ac.uk>,
                     Jaime Rodriguez <jr1713@ic.ac.uk>,
                     Leanne Lyons <ll5914@ic.ac.uk>,
                     Paul Liétar <pl2113@ic.ac.uk>
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

Flag graphviz
  description: Generate dot files for graphviz

executable wacc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lexer
  default-language:    Haskell2010

  build-depends:       base >=4.6 && <4.9, array, containers, mtl, parsec, fgl, optparse-applicative
  build-tools:         alex

  If flag(graphviz)
    build-depends:     graphviz, text
    CPP-Options:       -DWITH_GRAPHVIZ
    CC-Options:        -DWITH_GRAPHVIZ

